--- a/hangman.html
+++ b/hangman.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="hangman.css">
+    <link rel="stylesheet" href="./hangman.css">
 </head>
 <body>
     <div class="container">
@@ -36,7 +36,7 @@
             <div class="letter" id="z">z</div>
         </div>
         <div class="image">
-            <img class="img" src="/images/hangman0.png" alt="">
+            <img class="img" src="./images/hangman0.png" alt="">
         </div>
         <h3 class="h3">game over !</h3>
         <button class="next">next</button>
@@ -44,6 +44,6 @@
             <p id="display">_____</p>
         </div>
     </div>
-    <script src="/hangman.js"></script>
+    <script src="./hangman.js"></script>
 </body>
 </html>
